# SoarZip

./: .editorconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/rules/: architecture-principles.mdc  coding-standards.mdc  comment-guidelines.mdc  git-workflow.mdc  project-structure.mdc  rust-comment-style.mdc  testing-guidelines.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive_utils.rs  commands.rs  lib.rs  logging.rs  main.rs
src-tauri/src/models/: file_item.rs  mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: archive_utils.rs  logging.rs  mod.rs
src/services/: appState.ts  archiveService.ts  extractionService.ts  fileService.ts  navigationService.ts  themeService.ts  windowService.ts
src/setup/: appSetup.ts  componentLoader.ts  home.ts  logo.ts  menu.ts  navigation.ts  search.ts  settings.ts  toolbar.ts  windowControls.ts
src/styles/: base.css  components.css  dialog.css  file-explorer.css  home.css  layout.css  main.css  notification.css  settings.css  status-bar.css  titlebar.css  toolbar.css  utils.css
src/ui/: aboutDialog.ts  confirmDialog.ts  extractDialog.ts  fileExplorer.ts  inputDialog.ts  newArchiveDialog.ts  notification.ts  settingsPanel.ts  uiManager.ts
src/ui/components/: confirm-dialog.html  extract-dialog.html  file-explorer.html  status-bar.html  (+2 more)
src/utils/: index.ts
