[package]
name = "soar-zip"
version = "0.1.0"
description = "A Tauri-based file archiver tool, designed as a lightweight alternative to 7-Zip and WinRAR with modern UI and essential compression features."
authors = ["Artaphy"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soar_zip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Optimization profile for dev builds
[profile.dev]
incremental = true  # Compile your binary in smaller steps.

# Optimization profile for release builds
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallelism for better optimization
panic = 'abort'     # Abort on panic to reduce binary size
strip = true        # Strip symbols from the binary (macOS/Linux)
